Dodan reservation request
